--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,15 @@ body{
 }
 .container{
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   gap: 10px;
   padding: 10px;
-  max-width: 1050px;
+  align-items: center
+  /* max-width: 90%; */
 }
 section{
   background: #fff;
-  border-radius: 7px;
+  /* border-radius: 7px; */
 }
 .tools-board{
   width: 210px;
@@ -59,64 +60,10 @@ section{
 .option:is(:hover, .active) :where(span, label){
   color: #4A98F7;
 }
-.option #fill-color{
-  cursor: pointer;
-  height: 14px;
-  width: 14px;
-}
-#fill-color:checked ~ label{
-  color: #4A98F7;
-}
 .option #size-slider{
   width: 100%;
   height: 5px;
   margin-top: 10px;
-}
-.colors .options{
-  display: flex;
-  justify-content: space-between;
-}
-.colors .option{
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  margin-top: 3px;
-  position: relative;
-}
-.colors .option:nth-child(1){
-  background-color: #fff;
-  border: 1px solid #bfbfbf;
-}
-.colors .option:nth-child(2){
-  background-color: #000;
-}
-.colors .option:nth-child(3){
-  background-color: #E02020;
-}
-.colors .option:nth-child(4){
-  background-color: #6DD400;
-}
-.colors .option:nth-child(5){
-  background-color: #4A98F7;
-}
-.colors .option.selected::before{
-  position: absolute;
-  content: "";
-  top: 50%;
-  left: 50%;
-  height: 12px;
-  width: 12px;
-  background: inherit;
-  border-radius: inherit;
-  border: 2px solid #fff;
-  transform: translate(-50%, -50%);
-}
-.colors .option:first-child.selected::before{
-  border-color: #ccc;
-}
-.option #color-picker{
-  opacity: 0;
-  cursor: pointer;
 }
 .buttons button{
   width: 100%;
@@ -145,17 +92,16 @@ section{
 }
 .drawing-board{
   flex: 1;
-  overflow: hidden;
+  padding: 10px;
+  background-color: #4A98F7;
 }
-.drawing-board canvas{
-  width: 100%;
-  height: 100%;
+.drawing-board .canvas{
+  margin: 10px;
 }
 
 #layers {
   list-style: none;
 }
-
 #muscle {
   background-color: var(--muscle-color);
   padding-left: 10px;
@@ -167,7 +113,6 @@ section{
   align-items: center;
   margin-bottom: 5px;
 }
-
 #fat {
   background-color: var(--fat-color);
   padding-left: 10px;
@@ -179,7 +124,6 @@ section{
   align-items: center;
   margin-bottom: 5px;
 }
-
 #bone {
   background-color: var(--bone-color);
   padding-left: 10px;
@@ -190,4 +134,26 @@ section{
   border: 1px;
   align-items: center;
   margin-bottom: 5px;
+}
+#resize-canvas{
+  color: #6C757D;
+  border: 1px solid #6C757D;
+  transition: all 0.3s ease;
+  margin-bottom: 0;
+}
+#resize-canvas:hover{
+  color: #fff;
+  background: #6C757D;
+}
+
+.input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 5px 0;
+}
+
+.input label {
+  margin-right: 10px;  /* Add some spacing between the label and the input */
 }
