--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
                 <li id="bone">
                   <input type="radio" name="colour" value="#d9bfbf"> Bone</input>
                 </li>
+                <li id="blank">
+                  <input type="radio" name="colour" value="#FFFFFF"> Blank</input>
+                </li>
             </form>
           </ul>
         </div>
