--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,8 @@
         <div class="row buttons">
           <button class="clear-canvas">Clear Canvas</button>
           <button class="save-img">Save As Image</button>
+          <input type="file" id="uploadImg" accept="image/png, image/jpeg, image/jpg" style="display: none;" />
+          <button id="uploadButton">Upload Image</button>
         </div>
       </section>
       <section class="drawing-board">
